--- a/HangerApplication/app/src/main/res/layout/fragment_dress.xml
+++ b/HangerApplication/app/src/main/res/layout/fragment_dress.xml
@@ -21,6 +21,20 @@
             android:id="@+id/calendar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
+
+        <TextView
+            android:id="@+id/confirm_text"
+            android:layout_width="280dp"
+            android:layout_height="100dp"
+            android:layout_below="@+id/calendar"
+            android:layout_centerHorizontal="true"
+            android:layout_gravity="center"
+            android:padding="10dp"
+            android:text="♡오늘의 코디를 추가해보세요♡"
+            android:textAlignment="center"
+            android:textSize="16dp"
+            android:textStyle="bold" />
+
     <LinearLayout
         android:id="@+id/dress_insert_Layout"
         android:layout_width="match_parent"
