--- a/HangerApplication/app/src/main/res/layout/fragment_home.xml
+++ b/HangerApplication/app/src/main/res/layout/fragment_home.xml
@@ -1,8 +1,8 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
     android:background="#ffffff"
     tools:context="com.example.geehy.hangerapplication.Fragments.HomeFragment">
 
@@ -10,7 +10,7 @@
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/floatingActionButton"
-        android:layout_width="73dp"
+        android:layout_width="52dp"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|right"
         android:layout_marginBottom="72dp"
@@ -23,21 +23,53 @@
         app:fabSize="normal"
         app:rippleColor="#000000" />
 
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/floatingButton_delete"
+        android:layout_width="52dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|right"
+        android:layout_marginBottom="132dp"
+        android:layout_marginRight="16dp"
+        android:layout_weight="0.03"
+        android:src="@drawable/ic_clear_24dp"
+        app:background="@color/colorPrimary"
+        app:backgroundTint="#9848d1"
+        app:elevation="5dp"
+        app:fabSize="normal"
+        app:rippleColor="#000000" />
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/floatingButton_undo"
+        android:layout_width="52dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|right"
+        android:layout_marginBottom="192dp"
+        android:layout_marginRight="16dp"
+        android:layout_weight="0.03"
+        android:src="@drawable/ic_undo"
+        app:background="@color/colorPrimary"
+        app:backgroundTint="#9848d1"
+        app:elevation="5dp"
+        app:fabSize="normal"
+        app:rippleColor="#000000"
+        android:visibility="gone"/>
+
+
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
         android:orientation="vertical">
 
         <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
             android:layout_weight="1">
 
 
             <GridView
                 android:id="@+id/home_gridview"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
                 android:background="#e7e7e7e7"
                 android:columnWidth="100dp"
                 android:horizontalSpacing="10dp"
@@ -66,9 +98,6 @@
                     android:textColor="#ffffff"
                     android:textSize="20dp"
                     android:visibility="visible" />
-                android:layout_alignParentBottom="true">
-
-
 
                 <Button android:background="#9848d1" android:layout_height="wrap_content" android:layout_width="match_parent" android:layout_weight="1" android:layout_gravity="bottom" android:id="@+id/home_camera_btn2" android:visibility="visible" android:textSize="20dp" android:textColor="#ffffff" android:text="CAMERA2"/>
 
