--- a/HangerApplication/app/src/main/res/layout/activity_weather.xml
+++ b/HangerApplication/app/src/main/res/layout/activity_weather.xml
@@ -9,31 +9,52 @@
     android:weightSum="1">
 
 
-
     <TextView
         android:id="@+id/showWeather"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
         android:padding="15dp"
-        android:text="♡ 오늘의 추천 ♡"
+        android:text="♡ weather RANDOM pick ♡"
+        android:textColor="@color/colorpp"
         android:textSize="21dp"
         android:textStyle="bold" />
 
 
-    <TextView
-        android:id="@+id/weather"
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:layout_gravity="left"
-        android:padding="10dp"
-        android:text="현재 날씨 : "
-        android:textColor="#000000"
-        android:textSize="15dp"
-        android:textStyle="bold" />
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:id="@+id/weather"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_gravity="left"
+            android:layout_weight="1"
+            android:padding="10dp"
+            android:text="현재 날씨 : "
+            android:textColor="#000000"
+
+            android:textSize="15dp"
+            android:textStyle="bold" />
+
+        <Spinner
+            android:id="@+id/citiesSpinner"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="false"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="false"
+            android:layout_alignParentTop="true"
+            android:layout_marginTop="10dp"
+            android:layout_weight="1"
+            android:entries="@array/cities" />
+    </RelativeLayout>
 
 
-        <LinearLayout
+    <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
